k3s/services/home-assistant/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: home-assistant
  name: home-assistant
spec:
  selector:
    app: home-assistant
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8123
  type: LoadBalancer
  loadBalancerIP: 192.168.4.152
