k3s/services/home-assistant/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant-ingress
  namespace: home-assistant
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - home-assistant.homelab.kevin.lutzer.ca
    secretName: home-assistant-homelab-kevin-lutzer-ca-tls
  rules:
  - host: home-assistant.homelab.kevin.lutzer.ca
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: home-assistant
              port:
                number: 80
